changes in version 0.99.12

- complete authors list in DESCRIPTION and vignette
- include more information on elements in show method
- basic vignette sections on data representation, handling etc.
- added 'ggforce' dependency for visualizing circular shapes

changes in version 0.99.11

- in 'readSpatialData()', provide option to specify 
  TRUE/FALSE/index/character to control reading

changes in version 0.99.10

- add support for multiscales in 'ImageArray's
  including show method to display available scales

changes in version 0.99.9

- add 'basilisk'-based interface to Python's 'spatialdata-io'
  to support readers across platforms & writing to .zarr 

changes in version 0.99.8

- updated show method to include information on coordinate systems

changes in version 0.99.7

- added utility '.coord2graph()' in coord.R to represent
  element-coordinate system relationships as graph

changes in version 0.99.6

- option to read 'table' using 'anndataR' instead 
  of 'anndata+zellkonverter' through 'basilisk'