@@ -65,6 +65,7 @@ exportMethods(plotShape)
 exportMethods(point)
 exportMethods(pointNames)
 exportMethods(points)
+exportMethods(query)
 exportMethods(shape)
 exportMethods(shapeNames)
 exportMethods(shapes)
